--- a/Source/BrowserApp/resources/layout/single-certificate.glade
+++ b/Source/BrowserApp/resources/layout/single-certificate.glade
@@ -456,10 +456,18 @@
           <object class="GtkVBox" id="vbox">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="spacing">1</property>
             <child>
-              <object class="GtkFixed" id="fixed2">
+              <object class="GtkScrolledWindow" id="scrolledwindow2">
+                <property name="width_request">500</property>
+                <property name="height_request">100</property>
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can_focus">True</property>
+                <property name="hscrollbar_policy">automatic</property>
+                <property name="vscrollbar_policy">automatic</property>
+                <child>
+                  <placeholder/>
+                </child>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -470,7 +478,7 @@
             <child>
               <object class="GtkScrolledWindow" id="scrolledwindow">
                 <property name="width_request">500</property>
-                <property name="height_request">300</property>
+                <property name="height_request">200</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="hscrollbar_policy">automatic</property>
@@ -487,7 +495,7 @@
             </child>
             <child>
               <object class="GtkScrolledWindow" id="scrolledwindow1">
-                <property name="width_request">300</property>
+                <property name="width_request">500</property>
                 <property name="height_request">130</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -517,7 +525,7 @@
                     <property name="receives_default">True</property>
                   </object>
                   <packing>
-                    <property name="y">20</property>
+                    <property name="y">5</property>
                   </packing>
                 </child>
               </object>
