--- a/Source/BrowserApp/data/layout/settings.glade
+++ b/Source/BrowserApp/data/layout/settings.glade
@@ -199,7 +199,7 @@
                 </child>
                 <child>
                   <object class="GtkCheckButton" id="checkbutton1_general">
-                    <property name="label" translatable="yes">打开多个标签页可能致使cuprum缓慢时警告我</property>
+                    <property name="label" translatable="yes">打开多个标签页可能致使浏览器缓慢时警告我</property>
                     <property name="width_request">300</property>
                     <property name="height_request">30</property>
                     <property name="visible">True</property>
@@ -230,7 +230,7 @@
                 </child>
                 <child>
                   <object class="GtkCheckButton" id="checkbutton2_general">
-                    <property name="label" translatable="yes">显示主页按钮</property>
+                    <property name="label" translatable="yes">显示状态栏</property>
                     <property name="width_request">300</property>
                     <property name="height_request">30</property>
                     <property name="visible">True</property>
@@ -271,21 +271,6 @@
                   <packing>
                     <property name="x">60</property>
                     <property name="y">430</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkCheckButton" id="checkbutton5_general">
-                    <property name="label" translatable="yes">全屏显示</property>
-                    <property name="width_request">300</property>
-                    <property name="height_request">30</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">False</property>
-                    <property name="draw_indicator">True</property>
-                  </object>
-                  <packing>
-                    <property name="x">60</property>
-                    <property name="y">460</property>
                   </packing>
                 </child>
               </object>
@@ -503,20 +488,6 @@
                   </object>
                   <packing>
                     <property name="x">120</property>
-                    <property name="y">100</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkButton" id="button1_content">
-                    <property name="label" translatable="yes">颜色</property>
-                    <property name="width_request">88</property>
-                    <property name="height_request">30</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">True</property>
-                  </object>
-                  <packing>
-                    <property name="x">300</property>
                     <property name="y">100</property>
                   </packing>
                 </child>
